# cv-reviewer

./: README.md
cv_crew/: .gitignore  README.md  pyproject.toml  report.md
cv_crew/src/cv_crew/: app.py  crew.py  main.py
cv_crew/src/cv_crew/config/: agents.yaml  tasks.yaml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
