[project]
name = "cv_crew"
version = "0.1.0"
description = "cv-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
cv_crew = "cv_crew.main:run"
run_crew = "cv_crew.main:run"
train = "cv_crew.main:train"
replay = "cv_crew.main:replay"
test = "cv_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
